--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 torch==1.5.1
 torchvision==0.6.1
-numpy>=1.17.4
+numpy
 scikit-learn==0.23.1
-matplotlib==3.1.1
+matplotlib
 seaborn==0.10.1
 networkx==2.4.0
 tqdm==4.47.0
 filelock==3.0.12
-tensorflow-gpu==2.5.0
+tensorflow-gpu
 tensorflow_datasets==4.4.0
 
 
